# EmailTriageSystem

./: .dockerignore  .env.example  Dockerfile  README.md  baseline.py  baseline_results.json  gemini.md  git_log_status.txt  guidelines.md  inference.py  openenv.yaml  openenv_wrapper.py  pyproject.toml  requirements.txt  server.py  test_env.py
client/: agent.py
env/: models.py  simulator.py
reward/: reward_engine.py
reward/components/: correctness.py
scripts/: baseline.py
server/: app.py
tests/: test_env.py
