[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "email-triage-env"
version = "1.0.0"
description = "An OpenEnv-compatible RL environment for email triage"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["."]

[project.scripts]
run-server = "scripts.run_server:main"
run-benchmark = "scripts.run_benchmark:main"